# autotex

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  autotex.cabal
app/: Main.hs
src/: commands.rs  compilable.rs  engines.rs  error.rs  help.rs  main.rs  remove_aux.rs  texfile_info.rs  utils.rs
src/AutoTeX/: Help.hs  TeXEngines.hs  Utils.hs
