[package]
name = "autotex"
description = "Continuously compile TeX and LaTeX "
version = "1.3.0"
authors = ["Sungbae Jeong <almagest0328@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
walkdir = "2.4"
dirs = "5.0"
signal-hook = "0.3"
yaml-rust = "0.4"
clap = "4"

[target."cfg(windows)".dependencies]
powershell_script = "1.1.0"
